# Iart

./: Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
iart/: Cargo.toml
iart-core/: Cargo.toml  build.rs
iart-core/doc/enum/IartEvent/: DroppedWithoutCheck.md  FunctionHook.md
iart-core/doc/fn/: const_str_to_usize.md  default_handler.md  is_found_pending_data.md  likely-opt-place_folder.md  remove_from_tracker.md  set_handler.md  update_to_tracker.md
iart-core/doc/fn/ErrorDetail/: new.md  try_cast_err.md
iart-core/doc/fn/Iart/: __internal_send_try_used.md  __internal_take_data.md  __internal_take_item.md  __internal_take_log.md  branch.md  drop.md  is_ok.md  map.md  map_err_item.md  unwrap_err.md  unwrap_unchecked.md
iart-core/doc/fn/Iart/alloc_api/: Err.md  Err_in.md  Err_item.md  Err_string_item_in.md  new_ok_in.md  new_string_err_in.md
iart-core/doc/fn/Iart/non_alloc_api/: Err_string.md  Err_string_item.md
iart-core/doc/modules/: alloc_api.md  allow_backtrace_logging.md  events.md  iart_impl.md  impls.md  nightly_support.md  non_alloc_api.md  try_support.md  types.md
iart-core/doc/structs/: DownCasted.md  DummyErr.md  Iart.md  IartBacktrace.md  IartHandleDetails.md  Trans.md
iart-core/doc/variable/: MAX_OFFSET.md  TRACE_REMOVE_TYPE.md
iart-core/doc/variable/ErrorDetail/: ty.md
iart-core/doc/variable/Iart/: allocator.md  data.md  log.md
iart-core/doc/variable/IartHandleDetails/: log.md
iart-core/doc/variable/Trans/: to_any.md
iart-core/doc/variable/global/: data.md  item.md  trans_fns.md
iart-core/src/: events.rs  lib.rs  tests.rs  types.rs  utils.rs
iart-core/src/iart_impl/: impls.rs  mod.rs
iart-core/src/iart_impl/allow_backtrace_logging/: impls.rs  mod.rs  non_alloc_api.rs
iart-core/src/iart_impl/check_unused_result/: alloc_api.rs  non_alloc_api.rs
iart-core/src/iart_impl/drop_check/: alloc_api.rs  non_alloc_api.rs
iart-core/src/iart_impl/error_can_have_item/: alloc_api.rs  non_alloc_api.rs
iart-core/src/iart_impl/nightly_support/: mod.rs
iart-core/src/iart_impl/nightly_support/alloc_api/: alloc_api.rs  non_alloc_api.rs
iart-core/src/iart_impl/nightly_support/generic_member_access/: alloc_api.rs  mod.rs
iart-core/src/iart_impl/nightly_support/try_api/: alloc_api.rs  non_alloc_api.rs
iart-macros/: Cargo.toml
iart-macros/doc/macros/: iart_try.md
iart-macros/src/: lib.rs
iart-rs/: Cargo.toml
iart-rs-core/: Cargo.toml
iart-rs-core/doc/enum/FailType/: FailToGetTrackerSlot.md
iart-rs-core/doc/enum/IartEvent/: CreationDegraded.md  FmtRequest.md
iart-rs-core/doc/fn/Iart/: __internal_rebuild_err.md  __internal_take_track_id.md  for_each_log.md  is_err.md  send_log.md  try_downcast.md
iart-rs-core/doc/modules/: utils.md
iart-rs-core/doc/structs/: ErrorDetail.md  FailType.md  Iart.md  IartEvent.md  ToResultRet.md
iart-rs-core/doc/variable/: TRACE_DATABASE.md  TRACE_UNIQUE.md  TRACKER.md  TRACKING_COUNT.md
iart-rs-core/doc/variable/Iart/: handled.md
iart-rs-core/doc/variable/global/: log.md
iart-rs-core/src/: tests.rs  types.rs  utils.rs
iart-rs-core/src/iart_impl/: impls.rs
iart-rs-macros/: Cargo.toml
iart-rs-macros/doc/macros/: iart_open_no_log.md
iart-rs-macros/src/: lib.rs
iart-rs/src/: lib.rs
iart/examples/: basic_usage.rs
iart/src/: lib.rs
result-aat/: Cargo.toml
result-aat-core/: Cargo.toml  build.rs
result-aat-core/doc/enum/FailType/: FailToGetTraceDatabaseSlot.md
result-aat-core/doc/enum/IartEvent/: TraceOverFlow.md
result-aat-core/doc/fn/: add_to_tracker.md  get_current_tracking_data.md  is_initialized_handler.md  str_eq.md
result-aat-core/doc/fn/Iart/: __internal_get_allocator.md  __internal_get_trans_fns.md  __internal_mark_handled.md  __internal_take_err_item.md  err.md  expect.md  ok.md  peak_err.md  send_log_to_handler.md  to_result.md  unwrap.md  with_item.md
result-aat-core/doc/fn/Iart/alloc_api/: Err_item_in.md  Err_string_item.md  from_option.md  from_option_in.md  new_ok.md  new_string_err.md
result-aat-core/doc/fn/Iart/non_alloc_api/: Err_item.md  Ok.md  from_option.md
result-aat-core/doc/modules/: check_unused_result.md  error_can_have_item.md  generic_member_access.md  lib.md
result-aat-core/doc/structs/: AutoRequestType.md  GetErrRet.md  Iart.md  IartBacktraceRef.md
result-aat-core/doc/trait/: IartErr.md
result-aat-core/doc/variable/: HANDLER.md  HANDLER_CREATED.md  TRACE_DATABASE_SIZE.md
result-aat-core/doc/variable/DownCasted/: downcast.md
result-aat-core/doc/variable/ErrorDetail/: desc.md
result-aat-core/doc/variable/Iart/: err_item.md  tracking_id.md
result-aat-core/doc/variable/IartHandleDetails/: detail.md
result-aat-core/doc/variable/Trans/: from_any.md
result-aat-core/doc/variable/global/: trans_fns.md
result-aat-core/src/: lib.rs  types.rs  utils.rs
result-aat-core/src/iart_impl/: impls.rs  mod.rs
result-aat-core/src/iart_impl/allow_backtrace_logging/: alloc_api.rs  impls.rs
result-aat-core/src/iart_impl/check_unused_result/: alloc_api.rs  non_alloc_api.rs
result-aat-core/src/iart_impl/drop_check/: alloc_api.rs  mod.rs
result-aat-core/src/iart_impl/error_can_have_item/: alloc_api.rs  mod.rs
result-aat-core/src/iart_impl/nightly_support/: mod.rs
result-aat-core/src/iart_impl/nightly_support/alloc_api/: alloc_api.rs  mod.rs  non_alloc_api.rs
result-aat-core/src/iart_impl/nightly_support/generic_member_access/: alloc_api.rs
result-aat-core/src/iart_impl/nightly_support/try_api/: alloc_api.rs  non_alloc_api.rs
result-aat-macros/: Cargo.toml
result-aat-macros/doc/macros/: derive_iart_err.md  iart_try.md
result-aat-macros/src/: lib.rs
result-aat/examples/: basic_usage.rs
result-aat/src/: lib.rs
src/: events.rs  lib.rs  tests.rs  types.rs  utils.rs
src/iart_impl/: impls.rs  mod.rs
src/iart_impl/allow_backtrace_logging/: impls.rs  mod.rs
src/iart_impl/check_unused_result/: alloc_api.rs  non_alloc_api.rs
src/iart_impl/error_can_have_item/: alloc_api.rs  non_alloc_api.rs
src/iart_impl/nightly_support/: mod.rs
(+12 files in other folders)
