[workspace]
resolver = "3"

members = ["iart-rs", "iart-rs-core", "iart-rs-macros"]

[workspace.package]
edition = "2024"

version = "2.0.0-beta.1"
authors = ["ookatu <hgfhgfojgljgjhdiopyfgiiiiiu@outlook.com>"]

description = "The Infomation and Result Trace crate"

repository = "https://github.com/ookatuk/Iart"
license = "Apache-2.0"

keywords = ["error-handling", "no-std", "tracing", "diagnostics"]
categories = ["rust-patterns", "no-std", "development-tools::debugging"]

[workspace.dependencies]
iart-rs-core = { path = "iart-rs-core", version = "2.0.0-beta.1", default-features = false }
iart-rs-macros = { path = "iart-rs-macros", version = "2.0.0-beta.1", default-features = false }

