[workspace]
resolver = "3"

members = ["result-aat", "result-aat-core", "result-aat-macros"]

[workspace.package]
edition = "2024"

version = "1.1.3"
authors = ["ookatu <hgfhgfojgljgjhdiopyfgiiiiiu@outlook.com>"]

description = "The Infomation and Result Trace crate"

repository = "https://github.com/ookatuk/Iart"
license = "Apache-2.0"

keywords = ["error-handling", "no-std", "tracing", "diagnostics"]
categories = ["rust-patterns", "no-std", "development-tools::debugging"]

[workspace.dependencies]
spin = "^0.10"
result-aat-core = { path = "result-aat-core", version = "1.1.2", default-features = false }
result-aat-macros = { path = "result-aat-macros", version = "1.1.2", default-features = false }

