[package]
name = "iart-core"

version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
core-error = { version = "^0.0", default-features = false, optional = true }
spin = { version = "^0.10", default-features = false, features = ["once"] }

[features]
default = ["std", "allow-backtrace-logging", "check-unused-result", "enable-default-handler"]

std = ["core-error/std", "alloc"]

for-nightly-likely-optimization = []
for-nightly-error-generic-member-access = []
for-nightly-try-support = []
for-nightly-allocator-api-support = ["alloc"]

enable-pending-tracker = ["spin/mutex", "spin/spin_mutex", "spin/lazy"]
enable-pending-tracker-tracking-count = ["enable-pending-tracker"]

no-trace-dedup = []

allow-backtrace-logging = []
allow-backtrace-logging-with-ok = ["allow-backtrace-logging"]

check-unused-result = []
check-unused-result-with-ok = ["check-unused-result"]
danger-allow-panic-if-unused = ["check-unused-result-with-ok"]

core_error-support = ["core-error"]
enable-default-handler = ["std"]

alloc = []

[dev-dependencies]
spin = { version = "^0.10" }