[package]
name = "iart-macros"

edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "^1.0" }
syn = { version = "^2.0" }
quote = { version = "^1.0" }