[package]
name = "iart-macros"

edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^2.0" }
quote = { version = "^1.0" }
iart-core = { workspace = true }