[package]
name = "result-aat"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[dependencies]
result-aat-core = { workspace = true }
result-aat-macros = { workspace = true }

[features]
default = ["std", "allow-backtrace-logging", "check-unused-result", "enable-default-handler"]

nightly = [
    "for-nightly-likely-optimization",
    "for-nightly-try-support",
    "for-nightly-allocator-api-support",
    "for-nightly-error-generic-member-access"
]

std = ["result-aat-core/std", "alloc"]

allow-backtrace-logging-with-ok = ["allow-backtrace-logging", "result-aat-core/allow-backtrace-logging-with-ok"]

check-unused-result-with-ok = ["check-unused-result", "result-aat-core/check-unused-result-with-ok"]
danger-allow-panic-if-unused = ["check-unused-result-with-ok", "result-aat-core/danger-allow-panic-if-unused"]

core_error-support = ["result-aat-core/core_error-support"]
enable-default-handler = ["result-aat-core/enable-default-handler", "std"]


for-nightly-allocator-api-support = ["result-aat-core/for-nightly-allocator-api-support", "result-aat-macros/for-nightly-allocator-api-support", "alloc"]
alloc = ["result-aat-core/alloc", "result-aat-macros/alloc"]

for-nightly-likely-optimization = ["result-aat-core/for-nightly-likely-optimization"]
for-nightly-try-support = ["result-aat-core/for-nightly-try-support", "result-aat-macros/for-nightly-try-support"]
for-nightly-error-generic-member-access = ["result-aat-core/for-nightly-error-generic-member-access"]

no-trace-dedup = ["result-aat-core/no-trace-dedup"]

allow-backtrace-logging = ["result-aat-core/allow-backtrace-logging"]

check-unused-result = ["result-aat-core/check-unused-result"]

error-can-have-item = ["result-aat-core/error-can-have-item"]